# salesforce-generate-package-xml

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  release.yml
docs/examples/: daily-tracking.yml  remove_unsupported_type.py
src/sf_package_xml/: __init__.py  __main__.py  cli.py  filters.py  metadata.py  xml_builder.py
tests/: test_cli.py  test_filters.py  test_metadata.py  test_xml_builder.py
