[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-package-xml"
version = "0.1.0"
description = "Salesforce org のすべてのメタデータを対象とする package.xml を自動生成するツール"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["salesforce", "package.xml", "metadata", "sfdx", "sf-cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
sf-package-xml = "sf_package_xml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
