[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-package-xml"
version = "1.0.3"
description = "Salesforce org のすべてのメタデータを対象とする package.xml を自動生成するツール"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["salesforce", "package.xml", "metadata", "sfdx", "sf-cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
sf-package-xml = "sf_package_xml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sf_package_xml --cov-report=term-missing"

[tool.coverage.run]
source = ["sf_package_xml"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # 行長は強制しない

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
